# career-website

./: .212zwftuz0tjd2747265374~  .breakpoints  .egs8sc6pcq853397430614~  .replit  LICENSE  README.md  app.py  pyproject.toml  replit_zip_error_log.txt
static/: content.css  style.css
templates/: about.html  footer.html  home.html  jobitem.html  navbar.html
